--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Jacek Becela
-	email = jacek.becela@gmail.com
+	name = Pawel Becela
+	email = pawbecela@gmail.com
 [alias]
   st = status
   ci = commit
@@ -11,9 +11,9 @@
   status = auto
   branch = auto
 [github]
-	user = ncr
+	user = pawelbecela
 	token = token = <.replace github-token>
 [core]
-	excludesfile = /Users/ncr/.gitignore.global
+	excludesfile = /Users/pawel_becela/.gitignore.global
 [push]
 	default = current
